[gd_scene load_steps=9 format=3 uid="uid://d141tqfswnd6o"]

[ext_resource type="Script" uid="uid://obd4w5fcojxo" path="res://Scenes/MapGenTestsScene/NoiseGenConfigs.gd" id="2_c6p8m"]
[ext_resource type="Script" uid="uid://dy64c2aj0yh5n" path="res://Scenes/MapGenTestsScene/sliders.gd" id="2_un6ir"]
[ext_resource type="Curve" uid="uid://dk8l73ghwyjhp" path="res://Map/NoiseGen/Curves/1_ground_curve.tres" id="3_732gm"]
[ext_resource type="Curve" uid="uid://b5u32uyi457kh" path="res://Map/NoiseGen/Curves/2_copper_curve.tres" id="4_in2fh"]
[ext_resource type="Curve" uid="uid://dw7m7knrtx0gd" path="res://Map/NoiseGen/Curves/3_iron_curve.tres" id="5_5oa7x"]
[ext_resource type="Curve" uid="uid://dnav1rymtenbp" path="res://Map/NoiseGen/Curves/4_gold_curve.tres" id="6_sgoq5"]
[ext_resource type="Curve" uid="uid://b2ratltfmapc2" path="res://Map/NoiseGen/Curves/5_diamond_curve.tres" id="7_tbe8a"]
[ext_resource type="Curve" uid="uid://dydwl8hr6aq1x" path="res://Map/NoiseGen/Curves/6_platinum_curve.tres" id="8_oeeng"]

[node name="MapGenTestsScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NoisePreviewContainer" type="Control" parent="CanvasLayer" node_paths=PackedStringArray("yOffset", "noisePreview")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_un6ir")
yOffset = NodePath("OffsetY")
noisePreview = NodePath("NoisePreview")

[node name="OffsetY" type="VSlider" parent="CanvasLayer/NoisePreviewContainer"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = 783.0
offset_bottom = 752.0
grow_horizontal = 0
grow_vertical = 2
rotation = 3.14159
max_value = 5000.0

[node name="NoisePreview" type="Sprite2D" parent="CanvasLayer/NoisePreviewContainer"]
position = Vector2(774, 456)
scale = Vector2(2.36719, 2.36719)

[node name="Camera2D" type="Camera2D" parent="CanvasLayer"]
visible = false
offset = Vector2(600.61, 400)

[node name="NoiseGenConfigs" type="Control" parent="CanvasLayer" node_paths=PackedStringArray("layerNameSelect", "layerColorEdit", "layerSeedEdit", "layerFrequencyEdit", "layerFractalOctavesEdit", "layerFractalLacunarityEdit", "layerFractalGainEdit", "layerCurveSelect", "breakPointActiveCheck", "breakPointSlider")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_c6p8m")
layerNameSelect = NodePath("VBoxContainer/GridContainer/OptionButton_LayerName_0")
layerColorEdit = NodePath("VBoxContainer/GridContainer/ColorPickerButton_0")
layerSeedEdit = NodePath("VBoxContainer/GridContainer/SpinBox_Seed_0")
layerFrequencyEdit = NodePath("VBoxContainer/GridContainer/SpinBox_Frequency_0")
layerFractalOctavesEdit = NodePath("VBoxContainer/GridContainer/SpinBox_FractalOctaves_0")
layerFractalLacunarityEdit = NodePath("VBoxContainer/GridContainer/SpinBox_FractalLacunarity_0")
layerFractalGainEdit = NodePath("VBoxContainer/GridContainer/SpinBox_FractalGain_0")
layerCurveSelect = NodePath("VBoxContainer/GridContainer/OptionButton_Curve_0")
curves = Array[Curve]([ExtResource("3_732gm"), ExtResource("4_in2fh"), ExtResource("5_5oa7x"), ExtResource("6_sgoq5"), ExtResource("7_tbe8a"), ExtResource("8_oeeng")])
breakPointActiveCheck = NodePath("VBoxContainer/GridContainer/CenterContainer_Active/BreakPointCheckButton_0")
breakPointSlider = NodePath("VBoxContainer/GridContainer/CenterContainer_BreakPoint/BreakPointSlider_0")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/NoiseGenConfigs"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer"]
layout_mode = 2
columns = 10

[node name="Title_LayerName" type="Label" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Layer
Name"

[node name="Title_Color" type="Label" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Color"
horizontal_alignment = 1

[node name="Title_Seed" type="Label" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Seed"
horizontal_alignment = 1

[node name="Title_Frequency" type="Label" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Frequency"
horizontal_alignment = 1

[node name="Title_FractalOctaves" type="Label" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Fractal
Octaves"
horizontal_alignment = 1

[node name="Title_FractalLacunarity" type="Label" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Fractal
Lacunarity"
horizontal_alignment = 1

[node name="Title_FractalGain" type="Label" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Fractal
Gain"
horizontal_alignment = 1

[node name="Title_Curve" type="Label" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(101.475, 0)
layout_mode = 2
text = "Curve"
horizontal_alignment = 1

[node name="Title_BreakPointActive" type="Label" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(101.475, 0)
layout_mode = 2
text = "Activate Break Point"
horizontal_alignment = 1

[node name="Title_BreakPoint" type="Label" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(101.475, 0)
layout_mode = 2
text = "BreakPoint"
horizontal_alignment = 1

[node name="OptionButton_LayerName_0" type="OptionButton" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(117.17, 40)
layout_mode = 2

[node name="ColorPickerButton_0" type="ColorPickerButton" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="SpinBox_Seed_0" type="SpinBox" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
layout_mode = 2
max_value = 1000.0

[node name="SpinBox_Frequency_0" type="SpinBox" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
layout_mode = 2
max_value = 1000.0
step = 0.001

[node name="SpinBox_FractalOctaves_0" type="SpinBox" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
layout_mode = 2
max_value = 500.0

[node name="SpinBox_FractalLacunarity_0" type="SpinBox" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
layout_mode = 2
step = 0.01

[node name="SpinBox_FractalGain_0" type="SpinBox" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
layout_mode = 2
step = 0.01

[node name="OptionButton_Curve_0" type="OptionButton" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="CenterContainer_Active" type="CenterContainer" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="BreakPointCheckButton_0" type="CheckButton" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer/CenterContainer_Active"]
layout_mode = 2

[node name="CenterContainer_BreakPoint" type="CenterContainer" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="BreakPointSlider_0" type="HSlider" parent="CanvasLayer/NoiseGenConfigs/VBoxContainer/GridContainer/CenterContainer_BreakPoint"]
custom_minimum_size = Vector2(121.795, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/NoiseGenConfigs"]
layout_mode = 2
offset_top = 97.0
offset_right = 718.0
offset_bottom = 176.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/NoiseGenConfigs/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/NoiseGenConfigs/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(117.025, 0)
layout_mode = 2
text = "Save"

[node name="ItemList" type="ItemList" parent="CanvasLayer/NoiseGenConfigs/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[connection signal="noiseGenLayersChanged" from="CanvasLayer/NoiseGenConfigs" to="CanvasLayer/NoisePreviewContainer" method="_on_noise_gen_configs_noise_gen_layers_changed"]
[connection signal="pressed" from="CanvasLayer/NoiseGenConfigs/HBoxContainer/VBoxContainer/Button" to="CanvasLayer/NoiseGenConfigs" method="_on_button_pressed"]
[connection signal="item_selected" from="CanvasLayer/NoiseGenConfigs/HBoxContainer/VBoxContainer/ItemList" to="CanvasLayer/NoiseGenConfigs" method="_on_item_list_item_selected"]
